# page-loader-hexlet-project-3

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
page_loader/: __init__.py  engine.py  parser_images.py  parser_resources.py  parser_scripts.py  settings_log.py  utilities.py
page_loader/scripts/: page_loader.py
tests/: test_page_loader.py
tests/fixtures/: html.html  image.html  image_result.html  resources.html  resources_result.html  scipts_result.html  scripts.html  scripts_result.html
