[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["kukhmax <kukhmax@gmail.com>"]
packages = [
  { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
