[tool.poetry]
name = "hexlet-code"
version = "0.1.5"
description = ""
authors = ["kukhmax <kukhmax@gmail.com>"]
packages = [
  { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"
progress = "^1.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"
mypy = "^0.910"
pytest-cov = "^3.0.0"
requests-mock = "^1.9.3"
types-requests = "^2.25.10"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
